--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -1,6 +1,6 @@
 // scss-docs-start import-stack
 // Configuration
-@import "node_modules/bootstrap/scss/_functions.scss";
+@import "./node_modules/bootstrap/scss/_functions.scss";
 $lemon: #dbdb7d;
 $papaya: #ee7b58;
 $berry: #7ddbd0;
@@ -9,11 +9,11 @@ $melon: #b1e3a3;
 $light-gray: #c0c0c0;
 $dark-gray: #454d4c;
 
-@import "node_modules/bootstrap/scss/_variables";
-@import "node_modules/bootstrap/scss/_variables-dark";
-@import "node_modules/bootstrap/scss/_maps";
-@import "node_modules/bootstrap/scss/_mixins";
-@import "node_modules/bootstrap/scss/_utilities";
+@import "./node_modules/bootstrap/scss/_variables";
+@import "./node_modules/bootstrap/scss/_variables-dark";
+@import "./node_modules/bootstrap/scss/_maps";
+@import "./node_modules/bootstrap/scss/_mixins";
+@import "./node_modules/bootstrap/scss/_utilities";
 
 
 
